Added web client frameworks and updated index.html to incorporate requirejs application.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="lib/skeleton/stylesheets/base.css">
     <link rel="stylesheet" href="lib/skeleton/stylesheets/skeleton.css">
     <link rel="stylesheet" href="lib/skeleton/stylesheets/layout.css">
+    <link rel="stylesheet" href="css/custom.css">
 
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -68,6 +69,9 @@
     </div>
 
 </div><!-- container -->
+
+<!-- application -->
+<script type="text/javascript" charset="utf-8" data-main="js/main.js" src="js/require.min.js"></script>
 
 <!--<form method="post"><p>Check to <label>
 <input type="checkbox" name="remember"/> remember me</label>
