Integrated and correctly functioning media queries.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -42,41 +42,47 @@
 <!-- Primary Page Layout
 ================================================== -->
 
-<!-- Delete everything in this .container and get started on your own site! -->
-
+<!-- CONTAINER - BEGIN -->
 <div class="container">
-    <div class="sixteen columns">
-        <h1 class="remove-bottom" style="margin-top: 40px">Skeleton</h1>
-        <h5>Version 1.2</h5>
-        <hr />
+    <!-- SIDEBAR NAV - BEGIN -->
+    <div class="three columns sidebar">
+        <nav>
+            <h3 id="logo">Skeleton</h3>
+            <ul>
+                <li><a href="#whatAndWhy">What &amp; Why</a></li>
+                <li><a href="#grid">Grid</a></li>
+                <li><a href="#typography">Typography</a></li>
+                <li><a href="#buttons">Buttons</a></li>
+                <li><a href="#forms">Forms</a></li>
+                <li><a href="#mediaQueries">Media Queries</a></li>
+                <li><a href="#support">Support</a></li>
+                <li><a href="#examples">Examples</a></li>
+                <li><a href="#download">Download</a></li>
+                <li><a href="#licenseandlog">License &amp; Log</a></li>
+            </ul>
+        </nav>
+        &nbsp;
     </div>
-    <div class="one-third column">
-        <h3>About Skeleton?</h3>
-        <p>Skeleton is a small collection of well-organized CSS files that can help you rapidly develop sites that look beautiful at any size, be it a 17" laptop screen or an iPhone. It's based on a responsive grid, but also provides very basic CSS for typography, buttons, forms and media queries. Go ahead, resize this super basic page to see the grid in action.</p>
-    </div>
-    <div class="one-third column">
-        <h3>Three Core Principles</h3>
-        <p>Skeleton is built on three core principles:</p>
-        <ul class="square">
-            <li><strong>A Responsive Grid Down To Mobile</strong>: Elegant scaling from a browser to tablets to mobile.</li>
-            <li><strong>Fast to Start</strong>: It's a tool for rapid development with best practices</li>
-            <li><strong>Style Agnostic</strong>: It provides the most basic, beautiful styles, but is meant to be overwritten.</li>
-        </ul>
-    </div>
-    <div class="one-third column">
-        <h3>Docs &amp; Support</h3>
-        <p>The easiest way to really get started with Skeleton is to check out the full docs and info at <a href="http://www.getskeleton.com">www.getskeleton.com.</a>. Skeleton is also open-source and has a <a href="https://github.com/dhgamache/skeleton">project on git</a>, so check that out if you want to report bugs or create a pull request. If you have any questions, thoughts, concerns or feedback, please don't hesitate to email me at <a href="mailto:hi@getskeleton.com">hi@getskeleton.com</a>.</p>
-    </div>
+    <!-- SIDEBAR NAV - END -->
 
-</div><!-- container -->
+    <!-- CONTENT - BEGIN -->
+    <div class="twelve columns offset-by-one content">
+        <header>
+            <h2 id="content-title">Content Title</h2>
+        </header>
+        <div class="content-section">
+            <form method="post"><p>Check to <label>
+            <input type="checkbox" name="remember"/> remember me</label>
+            <input type="submit" value="Submit"/>.</p></form>
+        </div>
+    </div>
+    <!-- CONTENT - END -->
+
+</div>
+<!-- CONTAINER - END -->
 
 <!-- application -->
 <script type="text/javascript" charset="utf-8" data-main="js/main.js" src="js/require.min.js"></script>
-
-<!--<form method="post"><p>Check to <label>
-<input type="checkbox" name="remember"/> remember me</label>
-<input type="submit" value="Submit"/>.</p></form>-->
-
 
 <!-- End Document
 ================================================== -->
