Added borders and cleaned up some media queries.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -47,7 +47,7 @@
     <!-- SIDEBAR NAV - BEGIN -->
     <div class="three columns sidebar">
         <nav>
-            <h3 id="logo">Skeleton</h3>
+            <h4 id="logo">Navigation</h4>
             <ul>
                 <li><a href="#whatAndWhy">What &amp; Why</a></li>
                 <li><a href="#grid">Grid</a></li>
@@ -66,7 +66,7 @@
     <!-- SIDEBAR NAV - END -->
 
     <!-- CONTENT - BEGIN -->
-    <div class="twelve columns offset-by-one content">
+    <div id="content" class="twelve columns content">
         <header>
             <h2 id="content-title">Content Title</h2>
         </header>
