Added title bar.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -42,6 +42,10 @@
 <!-- Primary Page Layout
 ================================================== -->
 
+<!-- FIXED TITLE BAR - BEGIN -->
+<div id="title-bar">Hello</div>
+<!-- FIXED TITLE BAR - END -->
+
 <!-- CONTAINER - BEGIN -->
 <div class="container">
     <!-- SIDEBAR NAV - BEGIN -->
