Added in base router/controller/layout/template functionality.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -43,7 +43,7 @@
 ================================================== -->
 
 <!-- FIXED TITLE BAR - BEGIN -->
-<div id="title-bar">Hello</div>
+<div id="title-bar"></div>
 <!-- FIXED TITLE BAR - END -->
 
 <!-- CONTAINER - BEGIN -->
