Separated index.html into regions.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -48,40 +48,8 @@
 
 <!-- CONTAINER - BEGIN -->
 <div class="container">
-    <!-- SIDEBAR NAV - BEGIN -->
-    <div class="three columns sidebar">
-        <nav>
-            <h4 id="logo">Navigation</h4>
-            <ul>
-                <li><a href="#whatAndWhy">What &amp; Why</a></li>
-                <li><a href="#grid">Grid</a></li>
-                <li><a href="#typography">Typography</a></li>
-                <li><a href="#buttons">Buttons</a></li>
-                <li><a href="#forms">Forms</a></li>
-                <li><a href="#mediaQueries">Media Queries</a></li>
-                <li><a href="#support">Support</a></li>
-                <li><a href="#examples">Examples</a></li>
-                <li><a href="#download">Download</a></li>
-                <li><a href="#licenseandlog">License &amp; Log</a></li>
-            </ul>
-        </nav>
-        &nbsp;
-    </div>
-    <!-- SIDEBAR NAV - END -->
-
-    <!-- CONTENT - BEGIN -->
-    <div id="content" class="twelve columns content">
-        <header>
-            <h2 id="content-title">Content Title</h2>
-        </header>
-        <div class="content-section">
-            <form method="post"><p>Check to <label>
-            <input type="checkbox" name="remember"/> remember me</label>
-            <input type="submit" value="Submit"/>.</p></form>
-        </div>
-    </div>
-    <!-- CONTENT - END -->
-
+    <div id="side-bar-nav" class="three columns sidebar"></div>
+    <div id="content" class="twelve columns content"></div>
 </div>
 <!-- CONTAINER - END -->
 
