Integrated routing to drive page layout.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -48,8 +48,8 @@
 
 <!-- CONTAINER - BEGIN -->
 <div class="container">
-    <div id="side-bar-nav" class="three columns sidebar"></div>
-    <div id="content" class="twelve columns content"></div>
+    <div id="side-bar-nav" class="three columns sidebar hidden"></div>
+    <div id="content" class="twelve columns content hidden"></div>
 </div>
 <!-- CONTAINER - END -->
 
