Continuing to clean up the UI.

--- a/client/web/static/html/index.html
+++ b/client/web/static/html/index.html
@@ -29,7 +29,7 @@
 <div class="container">
     <div class="row">
         <!-- application side-bar -->
-        <div id="side-bar" class="col-sm-4"></div>
+        <div id="side-bar" class="col-sm-4 hidden"></div>
         <!-- application content -->
         <div id="content" class="col-sm-8"></div>
     </div>
